# cpm-test1

./: CMakeLists.txt
subdir/: CMakeLists.txt
